--- a/pages/lantern.html
+++ b/pages/lantern.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="css/lantern.css">
+    </head>
 <body>
 
 <h1>My First Heading</h1>
