--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         
         <br>
         
-        <a href="pages/lantern.html" target="_blank">
+        <a href="lantern.html" target="_blank">
             <div>
                 <h3>Lantern Field</h3>
                 <p> An interactive light installation commissioned by the Smithsonian Freer Gallery of Art for the Cherry Blossom Festival.</p>
